# Voice-Robot-Control

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: pc_simulation.yaml
docs/: 01_solution_review.md  02_stack_choice.md  03_testing_plan.md  04_limitations.md
scripts/: download_vosk_model.sh  run_pc_demo.sh
src/voice_robot_control/: __init__.py  app.py  cli.py  config.py  logging_setup.py
src/voice_robot_control/audio/: __init__.py  audio_source.py  microphone.py
src/voice_robot_control/commands/: __init__.py  command.py  matcher.py  normalization.py
src/voice_robot_control/robot/: __init__.py  backend.py  serial_backend.py  simulation_backend.py  tcp_backend.py
src/voice_robot_control/speech/: __init__.py  recognizer.py  vosk_recognizer.py
tests/: test_command_matcher.py  test_config.py  test_normalization.py  test_simulation_backend.py
